<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/informe_matricula" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etSetor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etMatricula"
        android:ems="10"
        android:hint="@string/informe_setor" />

    <EditText
        android:id="@+id/etCpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etSetor"
        android:ems="10"
        android:hint="@string/informe_senha"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chxSalvPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCpf"
        android:layout_centerHorizontal="true"
        android:text="@string/ckx_salvar_preferencia" />

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chxSalvPref"
        android:text="@string/bt_consultar" />

    <Spinner
        android:id="@+id/spAno"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btConsultar"
        android:layout_toLeftOf="@+id/btConsultar" />

    <Spinner
        android:id="@+id/spMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spAno"
        android:layout_toLeftOf="@+id/spAno" />

</RelativeLayout>
